--- a/Marshmallow/Marshmallow.less
+++ b/Marshmallow/Marshmallow.less
@@ -3,8 +3,11 @@
 // style 
 @import "style/color";
 
+// component
+@import "component/m-btn";
+
 // default 
 body{
-   padding: 0;
-   margin: 0;
+   background: @background;
+   color: @on-background;
 }
