--- a/Marshmallow/Marshmallow.less
+++ b/Marshmallow/Marshmallow.less
@@ -2,6 +2,8 @@
 
 // style 
 @import "style/color";
+@import "style/radius";
+@import "style/font-size";
 
 // component
 @import "component/m-btn";
