--- a/Marshmallow/component/m-btn.less
+++ b/Marshmallow/component/m-btn.less
@@ -9,37 +9,113 @@ m-btn {
       justify-content: center;
       align-items: center;
       padding: 0 16px;
+      gap: 8px;
       height: 40px;
       #radius(4px);
       #font-size(2px);
       font-weight: 700;
       box-sizing: border-box;
       user-select: none;
+      vertical-align: middle;
       transition: 0.3s;
       &:active {
          scale: 0.9;
-         #radius(0px);
+         #radius(0px)!important;
       }
    }
    &::part(icon){
       padding: 0 4px;
+      background: red;
+      transition: 0.3s;
    }
    &::part(badge) {
       position: absolute;
-      top: -6px;
-      right: -6px;
+      top: 0;
+      right: 0;
+      translate: 40% -40%;
       box-sizing: border-box;
       min-height: 16px;
       background: @primary-container;
       color: @on-primary-container;
       padding: 4px 8px;
+      width: min-content;
       #radius(4px);
       #font-size(-4px);
+      transition: 0.3s;
+   }
+   
+   &[disabled]{
+      filter: grayscale(0.7);
+      opacity: 0.5;
+   }
+   
+   &[size="small"]{
+      &::part(button){
+         padding: 0 16px;
+         gap: 4px;
+         height: 30px;
+         #font-size(2px);
+         #radius(4px);
+         font-weight: 500;
+      }
+      &::part(icon){
+         padding: 0 2px;
+      }
+   }
+   &[size="normal"]{
+      &::part(button){
+         padding: 0 16px;
+         gap: 8px;
+         height: 40px;
+         #font-size(2px);
+         font-weight: 700;
+      }
+      &::part(icon){
+         padding: 0 4px;
+      }
+   }
+   &[size="large"]{
+      &::part(button){
+         padding: 0 20px;
+         gap: 8px;
+         height: 56px;
+         #font-size(4px);
+         #radius(8px);
+         font-weight: 900;
+      }
+      &::part(icon){
+         padding: 0 4px;
+      }
+   }
+   
+   &[icon-align="left"]::part(button) {
+      flex-flow: row nowrap;
    }
    &[icon-align="right"]::part(button) {
       flex-flow: row-reverse nowrap;
    }
    
+   &[badge-align="left"]::part(badge){
+      top: 0;
+      left: 0;
+      translate: -40% -40%;
+   }
+   &[badge-align="right"]::part(badge){
+      top: 0;
+      right: 0;
+      translate: 40% -40%;
+   }
+   
+   &[color="surface"] {
+      &::part(button) {
+         background: @surface;
+         color: @on-surface;
+      }
+      &::part(badge) {
+         background: @surface-variant;
+         color: @on-surface-variant;
+      }
+   }
    &[color="error"] {
       &::part(button) {
          background: @error;
@@ -138,6 +214,66 @@ m-btn {
       &::part(badge) {
          background: @quaternary;
          color: @on-quaternary;
+      }
+   }
+   &[badge-color="error"] {
+      &::part(badge) {
+         background: @error;
+         color: @on-error;
+      }
+   }
+   &[badge-color="primary"] {
+      &::part(badge) {
+         background: @primary;
+         color: @on-primary;
+      }
+   }
+   &[badge-color="secondary"] {
+      &::part(badge) {
+         background: @secondary;
+         color: @on-secondary;
+      }
+   }
+   &[badge-color="tertiary"] {
+      &::part(badge) {
+         background: @tertiary;
+         color: @on-tertiary;
+      }
+   }
+   &[badge-color="quaternary"] {
+      &::part(badge) {
+         background: @quaternary;
+         color: @on-quaternary;
+      }
+   }
+   &[badge-color="error-container"] {
+      &::part(badge) {
+         background: @error-container;
+         color: @on-error-container;
+      }
+   }
+   &[badge-color="primary-container"] {
+      &::part(badge) {
+         background: @primary-container;
+         color: @on-primary-container;
+      }
+   }
+   &[badge-color="secondary-container"] {
+      &::part(badge) {
+         background: @secondary-container;
+         color: @on-secondary-container;
+      }
+   }
+   &[badge-color="tertiary-container"] {
+      &::part(badge) {
+         background: @tertiary-container;
+         color: @on-tertiary-container;
+      }
+   }
+   &[badge-color="quaternary-container"] {
+      &::part(badge) {
+         background: @quaternary-container;
+         color: @on-quaternary-container;
       }
    }
 }
