--- a/Marshmallow/Marshmallow.less
+++ b/Marshmallow/Marshmallow.less
@@ -1,27 +1,17 @@
-/*** Marshmallow.less Alpha ***/
+/*** Marshmallow Alpha ***/
 
-// style 
-@import "style/color";
-@import "style/radius";
-@import "style/font-size";
-
-// component
-@import "component/m-app";
-@import "component/m-appbar";
-@import "component/m-btn";
+// styles 
+@import url(style/color);
+// components 
+@import url(components/m-app);
 
 // default 
-::selection{
-   background: @glass-variant;
-   color: @on-glass-variant;
+*{
+   user-select: none;
 }
-
 body{
    padding: 0;
    margin: 0;
-   background: @background;
-   color: @on-background;
-   transition: 0.3s;
    width: 100vw;
    height: 100vh;
 }
