--- a/Marshmallow/components/m-app.less
+++ b/Marshmallow/components/m-app.less
@@ -4,22 +4,5 @@ m-app{
    width: 100vw;
    height: 100vh;
    overflow: hidden auto;
-   &::part(bg){
-      top: 0;
-      left: 0;
-      z-index: 0;
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 100%;
-   }
-   &::part(inner){
-      top: 0;
-      left: 0;
-      z-index: 1;
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 100%;
-   }
+   box-sizing: border-box;
 }
