--- a/Marshmallow/components/button.css
+++ b/Marshmallow/components/button.css
@@ -20,6 +20,7 @@
    vertical-align: middle;
    font-size: 16px;
    font-weight: 700;
+   white-space: normal;
    box-shadow: var(--m-button-shadow);
    transition-property: scale, opacity;
    transition-duration: 0.3s;
