--- a/Marshmallow/components/checkbox.css
+++ b/Marshmallow/components/checkbox.css
@@ -23,7 +23,7 @@
    position: absolute;
    width: 4px;
    border-radius: 5px;
-   background: var(--m-on-surface-container-high);
+   background: var(--m-background);
    transition-property: background, left, top, height, rotate;
    transition-duration: 0.3s;
 }
