--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -97,3 +97,9 @@
 :host([dir="dtu"])::part(handle) {
    width: 100%;
 }
+
+:host([disabled]) {
+   opacity: 0.5;
+   cursor: not-allowed;
+   pointer-events: none;
+}
