--- a/Marshmallow/components/hr.css
+++ b/Marshmallow/components/hr.css
@@ -1,6 +1,6 @@
 /*** hr.css v1 ***/
 :host{
-   --m-hr-color: var(--m-outline);
+   --m-hr-color: var(--m-surface-container-high);
    --m-hr-style: solid;
    --m-hr-size: 2px;
    display: block;
