--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -6,24 +6,70 @@
    display: block;
    position: relative;
    width: 100%;
-   height: 4px;
+   height: 30px;
    background-color: var(--m-surface-container-high);
-   border-radius: 2px;
+   border-radius: 15px;
    box-sizing: border-box;
+   overflow: hidden;
    touch-action: none;
 }
 
-:host::part(progress) {
+:host::part(truck) {
    position: absolute;
    height: 100%;
+   width: calc(100% - 30px);
+}
+:host::part(progress) {
+   position: absolute;
    width: 0;
+   height: 100%;
+   border-radius: 0;
    background-color: var(--m-range-color);
-   border-radius: 2px;
    left: 0;
+}
+:host::part(handle) {
+   position: absolute;
+   width: 30px;
+   height: 30px;
+   background-color: var(--m-range-color);
+   border-radius: 15px;
+   box-shadow: none;
    top: 0;
+   left: 0;
+   translate: 0 0;
+}
+:host(:not([type="simple"])) [part="handle"]::after {
+   content: '';
+   display: block;
+   position: absolute;
+   width: 20px;
+   height: 20px;
+   border-radius: 10px;
+   background: var(--m-range-inner-color);
+   z-index: 4;
+   top: 50%;
+   left: 50%;
+   translate: -50% -50%;
 }
 
-:host::part(handle) {
+:host([type="simple"]) {
+   height: 4px;
+   border-radius: 15px;
+   overflow: unset;
+}
+:host([type="simple"])::part(truck) {
+   position: absolute;
+   height: 100%;
+   width: calc(100% - 20px);
+   left: 10px;
+   top: 0;
+}
+:host([type="simple"])::part(progress) {
+   height: 100%;
+   border-radius: 2px;
+   left: -10px;
+}
+:host([type="simple"])::part(handle) {
    position: absolute;
    width: 20px;
    height: 20px;
