--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -18,6 +18,8 @@
    position: absolute;
    height: 100%;
    width: calc(100% - 30px);
+   left: 15px;
+   top: 0;
 }
 :host::part(progress) {
    position: absolute;
@@ -25,7 +27,8 @@
    height: 100%;
    border-radius: 0;
    background-color: var(--m-range-color);
-   left: 0;
+   left: -15px;
+   transition: width, 0.1s;
 }
 :host::part(handle) {
    position: absolute;
@@ -37,6 +40,7 @@
    top: 0;
    left: 0;
    translate: 0 0;
+   transition: left, 0.1s;
 }
 :host(:not([type="simple"])) [part="handle"]::after {
    content: '';
@@ -60,7 +64,7 @@
 :host([type="simple"])::part(truck) {
    position: absolute;
    height: 100%;
-   width: calc(100% - 20px);
+   width: calc(100% - 18px);
    left: 10px;
    top: 0;
 }
