--- a/Marshmallow/components/switch.css
+++ b/Marshmallow/components/switch.css
@@ -24,7 +24,7 @@
    position: absolute;
    top: 5px;
    left: 5px;
-   transition-property: left;
+   transition-property: left, background;
    transition-duration: 0.3s;
 }
 
