--- a/Marshmallow/components/hr.css
+++ b/Marshmallow/components/hr.css
@@ -7,5 +7,5 @@
    width: 100%;
    height: 0;
    padding: 8px 0;
-   border-top: var(--m-hr-color) var(--m-hr-style) var(--m-hr-size);
+   border-top: var(--m-hr-color) var(--m-hr-type) var(--m-hr-size);
 }
