--- a/Marshmallow/components/progress.css
+++ b/Marshmallow/components/progress.css
@@ -15,6 +15,14 @@
    height: 100%;
    background: var(--m-progress-color);
    border-radius: 2px;
+   animation: loop 1s linear infinite;
+}
+
+:host([sharp]){
+   border-radius: 0;
+}
+:host([sharp])::part(progress){
+   border-radius: 0;
 }
 
 @keyframes loop {
