--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -59,6 +59,7 @@
 :host([type="simple"]) {
    height: 4px;
    border-radius: 15px;
+   margin: 8px 0;
    overflow: unset;
 }
 :host([type="simple"])::part(truck) {
