--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -27,7 +27,7 @@
    height: 100%;
    border-radius: 0;
    background-color: var(--m-range-color);
-   left: -15px;
+   left: 0;
    transition: width, 0.1s;
 }
 :host::part(handle) {
@@ -39,7 +39,7 @@
    box-shadow: none;
    top: 0;
    left: 0;
-   translate: 0 0;
+   translate: -15px 0;
    transition: left, 0.1s;
 }
 :host(:not([type="simple"])) [part="handle"]::after {
@@ -65,13 +65,13 @@
 :host([type="simple"])::part(truck) {
    position: absolute;
    height: 100%;
-   width: calc(100% - 18px);
+   width: calc(100% - 20px);
    left: 10px;
    top: 0;
 }
 :host([type="simple"])::part(progress) {
    height: 100%;
-   border-radius: 2px;
+   border-radius: 8px;
    left: -10px;
 }
 :host([type="simple"])::part(handle) {
