--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -23,11 +23,11 @@
 }
 :host::part(progress) {
    position: absolute;
-   width: 0;
    height: 100%;
    border-radius: 0;
    background-color: var(--m-range-color);
-   left: 0;
+   left: -15px;
+   width: calc(50% + 15px);
    transition: width, 0.1s;
 }
 :host::part(handle) {
@@ -38,7 +38,7 @@
    border-radius: 15px;
    box-shadow: none;
    top: 0;
-   left: 0;
+   left: 50%;
    translate: -15px 0;
    transition: left, 0.1s;
 }
@@ -73,6 +73,7 @@
    height: 100%;
    border-radius: 8px;
    left: -10px;
+   width: calc(50% + 5px);
 }
 :host([type="simple"])::part(handle) {
    position: absolute;
@@ -82,7 +83,7 @@
    border-radius: 10px;
    box-shadow: 0 0 5px #0004;
    top: 0;
-   left: 0;
+   left: 50%;
    translate: -10px -8px;
 }
 
