--- a/Marshmallow/components/app.css
+++ b/Marshmallow/components/app.css
@@ -1,13 +1,14 @@
 /*** app.css v1 ***/
 :host {
-   --m-app-color: var(--m-background);
-   --m-app-inner-color: var(--m-on-background);
+   --color: var(--m-app-color, var(--m-primary));
+   --ineer-color: var(--m-app-ineer-color, var(--m-on-primary));
+   
    display: block;
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow: auto;
    box-sizing: border-box;
-   background: var(--m-app-color);
-   color: var(--m-app-inner-color);
+   background: var(--color);
+   color: var(--color);
 }
