--- a/Marshmallow/components/badge.css
+++ b/Marshmallow/components/badge.css
@@ -1,12 +1,12 @@
 /*** badge.css v1 ***/
 
 :host {
-   --m-badge-color: var(--m-primary);
-   --m-badge-ineer-color: var(--m-on-primary);
+   --color: var(--m-badge-color, var(--m-primary));
+   --ineer-color: var(--m-badge-ineer-color, var(--m-on-primary));
    
    display: inline-block;
-   background: var(--m-badge-color); 
-   color: var(--m-badge-ineer-color); 
+   background: var(--color); 
+   color: var(--inner-color); 
    padding: 4px 8px; 
    border-radius: 8px;
    vertical-align: middle;
