--- a/Marshmallow/components/hr.css
+++ b/Marshmallow/components/hr.css
@@ -1,11 +1,12 @@
 /*** hr.css v1 ***/
 :host{
-   --m-hr-color: var(--m-surface-container-high);
-   --m-hr-type: solid;
-   --m-hr-size: 2px;
+   --color: var(--m-hr-color, var(--m-surface-container-high));
+   --type: var(--m-hr-type, solid);
+   --size: var(--m-hr-size, 2px);
+   
    display: block;
    width: 100%;
    height: 0;
    padding: 8px 0;
-   border-top: var(--m-hr-color) var(--m-hr-type) var(--m-hr-size);
+   border-top: var(--color) var(--type) var(--size);
 }
