--- a/Marshmallow/components/progress.css
+++ b/Marshmallow/components/progress.css
@@ -1,6 +1,7 @@
 /*** progress.css v1 ***/
 :host {
-   --m-progress-color: var(--m-primary);
+   --color: var(--m-progress-color, var(--m-primary));
+   
    display: block;
    width: 100%;
    height: 4px;
@@ -14,7 +15,7 @@
    position: absolute;
    left: 0;
    height: 100%;
-   background: var(--m-progress-color);
+   background: var(--color);
    border-radius: 2px;
    animation: loop 1s linear infinite;
    transition: width, 0.3s;
@@ -52,7 +53,7 @@
 
 :host([type="circular"])::part(progress) {
    fill: none;
-   stroke: var(--m-progress-color);
+   stroke: var(--color);
    stroke-width: 5px;
    stroke-linecap: round;
    transform-origin: center;
@@ -82,17 +83,17 @@
 
 @keyframes loop2 {
    0% {
-      stroke-dashoffset: var(--m-progress-circumference);
+      stroke-dashoffset: var(--circumference);
       rotate: 0deg;
    }
 
    50% {
-      stroke-dashoffset: var(--m-progress-circumference-5);
+      stroke-dashoffset: var(--circumference2);
       rotate: 180deg;
    }
 
    100% {
-      stroke-dashoffset: var(--m-progress-circumference);
+      stroke-dashoffset: var(--circumference);
       rotate: 720deg;
    }
 }
