--- a/Marshmallow/components/radio.css
+++ b/Marshmallow/components/radio.css
@@ -1,8 +1,8 @@
 /*** radio.css v1 ***/
 
 :host {
-   --m-radio-color: var(--m-primary);
-   --m-radio-inner-color: var(--m-on-primary);
+   --color: var(--m-radio-color, var(--m-primary));
+   --inner-color: var(--m-radio-ineer-color, var(--m-on-primary));
 
    display: inline-block;
    border: 4px solid var(--m-surface-container-high);
@@ -27,7 +27,7 @@
    width: 4px;
    height: 0;
    opacity: 0;
-   background: var(--m-radio-inner-color);
+   background: var(--inner-color);
 }
 
 :host::before {
@@ -50,7 +50,7 @@
 }
 
 :host([checked]) {
-   background: var(--m-radio-color);
+   background: var(--color);
    border: none;
 }
 
