--- a/Marshmallow/components/range.css
+++ b/Marshmallow/components/range.css
@@ -1,8 +1,8 @@
 /*** range.css v1 ***/
 :host {
-   --m-range-color: var(--m-primary);
-   --m-range-inner-color: var(--m-on-primary);
-
+   --color: var(--m-range-color, var(--m-primary));
+   --inner-color: var(--m-range-ineer-color, var(--m-on-primary));
+   
    display: block;
    position: relative;
    width: 100%;
@@ -25,7 +25,7 @@
    position: absolute;
    height: 100%;
    border-radius: 0;
-   background-color: var(--m-range-color);
+   background-color: var(--color);
    left: -15px;
    width: calc(50% + 15px);
    transition: width, 0.1s;
@@ -34,7 +34,7 @@
    position: absolute;
    width: 30px;
    height: 30px;
-   background-color: var(--m-range-color);
+   background-color: var(--color);
    border-radius: 15px;
    box-shadow: none;
    top: 0;
@@ -49,7 +49,7 @@
    width: 20px;
    height: 20px;
    border-radius: 10px;
-   background: var(--m-range-inner-color);
+   background: var(--inner-color);
    z-index: 4;
    top: 50%;
    left: 50%;
@@ -79,7 +79,7 @@
    position: absolute;
    width: 20px;
    height: 20px;
-   background-color: var(--m-range-color);
+   background-color: var(--color);
    border-radius: 10px;
    box-shadow: 0 0 5px #0004;
    top: 0;
