--- a/Marshmallow/components/badge.css
+++ b/Marshmallow/components/badge.css
@@ -2,7 +2,7 @@
 
 :host {
    --color: var(--m-badge-color, var(--m-primary));
-   --ineer-color: var(--m-badge-ineer-color, var(--m-on-primary));
+   --inner-color: var(--m-badge-inner-color, var(--m-on-primary));
    
    display: inline-block;
    background: var(--color); 
