--- a/Marshmallow/components/animation.css
+++ b/Marshmallow/components/animation.css
@@ -8,10 +8,11 @@
    --timing: var(--m-animation-timing, ease);
    --fill: var(--m-animation-fill, forwards);
    --state: var(--m-animation-state, running);
-
+   
    display: inline-block;
 }
 :host slot {
+   position: relative;
    display: inline-block;
    animation-name: var(--name);
    animation-duration: var(--dur);
@@ -29,6 +30,7 @@
    from {
       opacity: 0;
    }
+   
    to {
       opacity: 1;
    }
@@ -37,6 +39,7 @@
    from {
       opacity: 0;
    }
+   
    to {
       opacity: 1;
    }
@@ -45,35 +48,20 @@
    from {
       opacity: 1;
    }
+   
    to {
       opacity: 0;
    }
 }
 @keyframes fade-in-out {
-   0%,100% {
+   
+   0%,
+   100% {
       opacity: 1;
    }
+   
    50% {
       opacity: 0;
-   }
-}
-
-/* heart-beat */
-@keyframes heart-beat {
-   0% {
-      transform: scale(1);
-   }
-   14% {
-      transform: scale(1.3);
-   }
-   28% {
-      transform: scale(1);
-   }
-   42% {
-      transform: scale(1.3);
-   }
-   70% {
-      transform: scale(1);
    }
 }
 
@@ -82,6 +70,7 @@
    from {
       scale: 0.5;
    }
+   
    to {
       scale: 1;
    }
@@ -90,6 +79,7 @@
    from {
       scale: 0.5;
    }
+   
    to {
       scale: 1;
    }
@@ -98,14 +88,18 @@
    from {
       scale: 1;
    }
+   
    to {
       scale: 0.5;
    }
 }
 @keyframes zoom-in-out {
-   0%,100% {
+   
+   0%,
+   100% {
       scale: 1;
    }
+   
    50% {
       scale: 0.5;
    }
@@ -113,146 +107,221 @@
 
 /* shake */
 @keyframes shake {
-   from,to {
+   
+   from,
+   to {
       transform: rotate(0, 0, 1, 0);
    }
-   10%,30%,50%,70%,90% {
+   
+   10%,
+   30%,
+   50%,
+   70%,
+   90% {
       transform: rotate3d(0, 0, 1, -10deg);
    }
-   20%,40%,60%,80% {
-      transform: rotate3d(0 ,0 ,1 , 10deg);
+   
+   20%,
+   40%,
+   60%,
+   80% {
+      transform: rotate3d(0, 0, 1, 10deg);
    }
 }
 @keyframes shake-x {
-   from,to {
+   
+   from,
+   to {
       transform: translate3d(0, 0, 0);
    }
-   10%,30%,50%,70%,90% {
+   
+   10%,
+   30%,
+   50%,
+   70%,
+   90% {
       transform: translate3d(-10px, 0, 0);
    }
-   20%,40%,60%,80% {
+   
+   20%,
+   40%,
+   60%,
+   80% {
       transform: translate3d(10px, 0, 0);
    }
 }
 @keyframes shake-y {
-   from,to {
+   
+   from,
+   to {
       transform: translate3d(0, 0, 0);
    }
-   10%,30%,50%,70%,90% {
+   
+   10%,
+   30%,
+   50%,
+   70%,
+   90% {
       transform: translate3d(0, -10px, 0);
    }
-   20%,40%,60%,80% {
+   
+   20%,
+   40%,
+   60%,
+   80% {
       transform: translate3d(0, 10px, 0);
    }
 }
 @keyframes shake-z {
-   from,to {
+   
+   from,
+   to {
       transform: rotate(0, 0, 1, 0);
    }
-   10%,30%,50%,70%,90% {
+   
+   10%,
+   30%,
+   50%,
+   70%,
+   90% {
       transform: rotate3d(0, 0, 1, -10deg);
    }
-   20%,40%,60%,80% {
-      transform: rotate3d(0 ,0 ,1 , 10deg);
+   
+   20%,
+   40%,
+   60%,
+   80% {
+      transform: rotate3d(0, 0, 1, 10deg);
    }
 }
 
-/* tada */
-@keyframes tada {
+/* blur */
+@keyframes blur {
    from {
-     transform: scale3d(1, 1, 1);
+      filter: blur(20px);
    }
-   10%,20% {
-      transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
-   }
-   30%,50%,70%,90% {
-      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-   }
-   40%,60%,80% {
-     transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-   }
+   
    to {
-     transform: scale3d(1, 1, 1);
+      filter: blur(0);
+   }
+}
+@keyframes blur-in {
+   from {
+      filter: blur(20px);
+   }
+   
+   to {
+      filter: blur(0);
+   }
+}
+@keyframes blur-out {
+   from {
+      filter: blur(0);
+   }
+   
+   to {
+      filter: blur(20px);
+   }
+}
+@keyframes blur-in-out {
+
+   0%,
+   100% {
+      filter: blur(0);
+   }
+   
+   50% {
+      filter: blur(20px);
    }
 }
 
-/* rotate */
-@keyframes rotate {
-   0%{
+/* spin */
+@keyframes spin {
+   0% {
       transform: rotate3d(0, 0, 1, 0);
    }
+   
    100% {
       transform: rotate3d(0, 0, 1, 360deg);
    }
 }
-@keyframes rotate-x {
-   0%{
+@keyframes spin-x {
+   0% {
       transform: rotate3d(1, 0, 0, 0);
    }
+   
    100% {
       transform: rotate3d(1, 0, 0, 360deg);
    }
 }
-@keyframes rotate-y {
-   0%{
+@keyframes spin-y {
+   0% {
       transform: rotate3d(0, 1, 0, 0);
    }
+   
    100% {
       transform: rotate3d(0, 1, 0, 360deg);
    }
 }
-@keyframes rotate-z {
-   0%{
+@keyframes spin-z {
+   0% {
       transform: rotate3d(0, 0, 1, 0);
    }
+   
    100% {
       transform: rotate3d(0, 0, 1, 360deg);
    }
 }
-@keyframes rotate-in-x {
+@keyframes spin-in-x {
    from {
       transform: rotate3d(1, 0, 0, 90deg);
    }
+   
    to {
       transform: rotate3d(1, 0, 0, 0);
    }
 }
-@keyframes rotate-in-y {
+@keyframes spin-in-y {
    from {
       transform: rotate3d(0, 1, 0, 90deg);
    }
+   
    to {
       transform: rotate3d(0, 1, 0, 0);
    }
 }
-@keyframes rotate-in-z {
+@keyframes spin-in-z {
    from {
       transform: rotate3d(0, 0, 1, 90deg);
    }
+   
    to {
       transform: rotate3d(0, 0, 1, 0);
    }
 }
-@keyframes rotate-out-x {
+@keyframes spin-out-x {
    from {
       transform: rotate3d(1, 0, 0, 0);
    }
+   
    to {
       transform: rotate3d(1, 0, 0, 90deg);
    }
 }
-@keyframes rotate-out-y {
+@keyframes spin-out-y {
    from {
       transform: rotate3d(0, 1, 0, 0);
    }
+   
    to {
       transform: rotate3d(0, 1, 0, 90deg);
    }
 }
-@keyframes rotate-out-z {
+@keyframes spin-out-z {
    from {
       transform: rotate3d(0, 0, 1, 0);
    }
+   
    to {
       transform: rotate3d(0, 0, 1, 90deg);
    }
@@ -263,21 +332,27 @@
    0% {
       transform: scale3d(1, 1, 1);
    }
+   
    30% {
       transform: scale3d(1.25, 0.75, 1);
    }
+   
    40% {
       transform: scale3d(0.75, 1.25, 1);
    }
+   
    50% {
       transform: scale3d(1.15, 0.85, 1);
    }
+   
    65% {
       transform: scale3d(0.95, 1.05, 1);
    }
+   
    75% {
       transform: scale3d(1.05, 0.95, 1);
    }
+   
    100% {
       transform: scale3d(1, 1, 1);
    }
@@ -286,21 +361,27 @@
    0% {
       transform: scale3d(1, 1, 1);
    }
+   
    30% {
       transform: scale3d(0.75, 1.25, 1);
    }
+   
    40% {
       transform: scale3d(1.25, 0.75, 1);
    }
+   
    50% {
       transform: scale3d(0.85, 1.15, 1);
    }
+   
    65% {
       transform: scale3d(1.05, 0.95, 1);
    }
+   
    75% {
       transform: scale3d(0.95, 1.05, 1);
    }
+   
    100% {
       transform: scale3d(1, 1, 1);
    }
@@ -309,21 +390,27 @@
    0% {
       transform: scale3d(1, 1, 1);
    }
+   
    30% {
       transform: scale3d(1.25, 0.75, 1);
    }
+   
    40% {
       transform: scale3d(0.75, 1.25, 1);
    }
+   
    50% {
       transform: scale3d(1.15, 0.85, 1);
    }
+   
    65% {
       transform: scale3d(0.95, 1.05, 1);
    }
+   
    75% {
       transform: scale3d(1.05, 0.95, 1);
    }
+   
    100% {
       transform: scale3d(1, 1, 1);
    }
@@ -332,32 +419,798 @@
    0% {
       transform: scale(1);
    }
+   
    30% {
       transform: scale(0.75);
    }
+   
    40% {
       transform: scale(1.25);
    }
+   
    50% {
       transform: scale(0.85);
    }
+   
    65% {
       transform: scale(1.05);
    }
+   
    75% {
       transform: scale(0.95);
    }
+   
    100% {
       transform: scale(1);
    }
 }
 
 /* up */
+@keyframes up {
+   0% {
+      top: 100px;
+   }
+   
+   100% {
+      top: 0;
+   }
+}
 
 /* down */
+@keyframes down {
+   0% {
+      bottom: 100px;
+   }
+   
+   100% {
+      bottom: 0;
+   }
+}
 
 /* left */
+@keyframes left {
+   0% {
+      left: 100px;
+   }
+   
+   100% {
+      left: 0;
+   }
+}
 
 /* right */
+@keyframes right {
+   0% {
+      right: 100px;
+   }
+   
+   100% {
+      right: 0;
+   }
+}
+
 
 /*** Special Animations ***/
+/* heart-beat */
+@keyframes heart-beat {
+   0% {
+      transform: scale(1);
+   }
+   
+   14% {
+      transform: scale(1.3);
+   }
+   
+   28% {
+      transform: scale(1);
+   }
+   
+   42% {
+      transform: scale(1.3);
+   }
+   
+   70% {
+      transform: scale(1);
+   }
+}
+
+/* tada */
+@keyframes tada {
+   from {
+      transform: scale3d(1, 1, 1);
+   }
+   
+   10%,
+   20% {
+      transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+   }
+   
+   30%,
+   50%,
+   70%,
+   90% {
+      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+   }
+   
+   40%,
+   60%,
+   80% {
+      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+   }
+   
+   to {
+      transform: scale3d(1, 1, 1);
+   }
+}
+
+/* rubber-band */
+@keyframes rubber-band {
+   from {
+      transform: scale3d(1, 1, 1);
+   }
+   
+   30% {
+      transform: scale3d(1.25, 0.75, 1);
+   }
+   
+   40% {
+      transform: scale3d(0.75, 1.25, 1);
+   }
+   
+   50% {
+      transform: scale3d(1.15, 0.85, 1);
+   }
+   
+   65% {
+      transform: scale3d(0.95, 1.05, 1);
+   }
+   
+   75% {
+      transform: scale3d(1.05, 0.95, 1);
+   }
+   
+   to {
+      transform: scale3d(1, 1, 1);
+   }
+}
+
+/* wobble */
+@keyframes wobble {
+   
+   0%,
+   100% {
+      transform: translateX(0%);
+      transform-origin: 50% 50%;
+   }
+   
+   15% {
+      transform: translateX(-30px) rotate(-6deg);
+   }
+   
+   30% {
+      transform: translateX(15px) rotate(6deg);
+   }
+   
+   45% {
+      transform: translateX(-15px) rotate(-3.6deg);
+   }
+   
+   60% {
+      transform: translateX(9px) rotate(2.4deg);
+   }
+   
+   75% {
+      transform: translateX(-6px) rotate(-1.2deg);
+   }
+}
+@keyframes wobble-bottom {
+   
+   0%,
+   100% {
+      transform: translateX(0%);
+      transform-origin: 50% 50%;
+   }
+   
+   15% {
+      transform: translateX(-30px) rotate(-6deg);
+   }
+   
+   30% {
+      transform: translateX(15px) rotate(6deg);
+   }
+   
+   45% {
+      transform: translateX(-15px) rotate(-3.6deg);
+   }
+   
+   60% {
+      transform: translateX(9px) rotate(2.4deg);
+   }
+   
+   75% {
+      transform: translateX(-6px) rotate(-1.2deg);
+   }
+}
+@keyframes wobble-top {
+   
+   0%,
+   100% {
+      transform: translateX(0%);
+      transform-origin: 50% 50%;
+   }
+   
+   15% {
+      transform: translateX(-30px) rotate(6deg);
+   }
+   
+   30% {
+      transform: translateX(15px) rotate(-6deg);
+   }
+   
+   45% {
+      transform: translateX(-15px) rotate(3.6deg);
+   }
+   
+   60% {
+      transform: translateX(9px) rotate(-2.4deg);
+   }
+   
+   75% {
+      transform: translateX(-6px) rotate(1.2deg);
+   }
+}
+@keyframes wobble-left {
+   
+   0%,
+   100% {
+      transform: translateY(0) rotate(0);
+      transform-origin: 50% 50%;
+   }
+   
+   15% {
+      transform: translateY(-30px) rotate(-6deg);
+   }
+   
+   30% {
+      transform: translateY(15px) rotate(6deg);
+   }
+   
+   45% {
+      transform: translateY(-15px) rotate(-3.6deg);
+   }
+   
+   60% {
+      transform: translateY(9px) rotate(2.4deg);
+   }
+   
+   75% {
+      transform: translateY(-6px) rotate(-1.2deg);
+   }
+}
+@keyframes wobble-right {
+   
+   0%,
+   100% {
+      transform: translateY(0) rotate(0);
+      transform-origin: 50% 50%;
+   }
+   
+   15% {
+      transform: translateY(-30px) rotate(6deg);
+   }
+   
+   30% {
+      transform: translateY(15px) rotate(-6deg);
+   }
+   
+   45% {
+      transform: translateY(-15px) rotate(3.6deg);
+   }
+   
+   60% {
+      transform: translateY(9px) rotate(-2.4deg);
+   }
+   
+   75% {
+      transform: translateY(-6px) rotate(1.2deg);
+   }
+}
+
+/* bounce */
+@keyframes bounce {
+   0% {
+      transform: translateY(-45px);
+      animation-timing-function: ease-in;
+      opacity: 1;
+   }
+   
+   24% {
+      opacity: 1;
+   }
+   
+   40% {
+      transform: translateY(-24px);
+      animation-timing-function: ease-in;
+   }
+   
+   65% {
+      transform: translateY(-12px);
+      animation-timing-function: ease-in;
+   }
+   
+   82% {
+      transform: translateY(-6px);
+      animation-timing-function: ease-in;
+   }
+   
+   93% {
+      transform: translateY(-4px);
+      animation-timing-function: ease-in;
+   }
+   
+   25%,
+   55%,
+   75%,
+   87% {
+      transform: translateY(0px);
+      animation-timing-function: ease-out;
+   }
+   
+   100% {
+      transform: translateY(0px);
+      animation-timing-function: ease-out;
+      opacity: 1;
+   }
+}
+
+/* scale */
+@keyframes scale-up-center {
+   0% {
+      transform: scale(0.5);
+   }
+   
+   100% {
+      transform: scale(1);
+   }
+}
+@keyframes scale-up-hor-center {
+   0% {
+      transform: scaleX(0.4);
+   }
+   
+   100% {
+      transform: scaleX(1);
+   }
+}
+@keyframes scale-up-ver-center {
+   0% {
+      transform: scaleY(0.4);
+   }
+   
+   100% {
+      transform: scaleY(1);
+   }
+}
+@keyframes scale-down-center {
+   0% {
+      transform: scale(1);
+   }
+   
+   100% {
+      transform: scale(0.5);
+   }
+}
+@keyframes scale-down-hor-center {
+   0% {
+      transform: scaleX(1);
+   }
+   
+   100% {
+      transform: scaleX(0.3);
+   }
+}
+@keyframes scale-down-ver-center {
+   0% {
+      transform: scaleY(1);
+   }
+   
+   100% {
+      transform: scaleY(0.3);
+   }
+}
+
+/* rotate */
+@keyframes rotate-center {
+   0% {
+      transform: rotate(0);
+   }
+   
+   100% {
+      transform: rotate(360deg);
+   }
+}
+@keyframes rotate-hor-center {
+   0% {
+      transform: rotateX(0);
+   }
+   
+   100% {
+      transform: rotateX(-360deg);
+   }
+}
+@keyframes rotate-ver-center {
+   0% {
+      transform: rotateY(0);
+   }
+   
+   100% {
+      transform: rotateY(360deg);
+   }
+}
+@keyframes rotate-scale-up {
+   0% {
+      transform: scale(1) rotateZ(0);
+   }
+   
+   50% {
+      transform: scale(2) rotateZ(180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateZ(360deg);
+   }
+}
+@keyframes rotate-scale-down {
+   0% {
+      transform: scale(1) rotateZ(0);
+   }
+   
+   50% {
+      transform: scale(0.5) rotateZ(180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateZ(360deg);
+   }
+}
+@keyframes rotate-scale-up-hor {
+   0% {
+      transform: scale(1) rotateX(0);
+   }
+   
+   50% {
+      transform: scale(2) rotateX(-180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateX(-360deg);
+   }
+}
+@keyframes rotate-scale-down-hor {
+   0% {
+      transform: scale(1) rotateX(0);
+   }
+   
+   50% {
+      transform: scale(0.5) rotateX(-180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateX(-360deg);
+   }
+}
+@keyframes rotate-scale-up-ver {
+   0% {
+      transform: scale(1) rotateY(0);
+   }
+   
+   50% {
+      transform: scale(2) rotateY(180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateY(360deg);
+   }
+}
+@keyframes rotate-scale-down-ver {
+   0% {
+      transform: scale(1) rotateY(0);
+   }
+   
+   50% {
+      transform: scale(0.5) rotateY(180deg);
+   }
+   
+   100% {
+      transform: scale(1) rotateY(360deg);
+   }
+}
+
+/* flip */
+@keyframes flip-hor-bottom {
+   0% {
+      transform: rotateX(0);
+   }
+   
+   100% {
+      transform: rotateX(-180deg);
+   }
+}
+@keyframes flip-hor-top {
+   0% {
+      transform: rotateX(0);
+   }
+   
+   100% {
+      transform: rotateX(180deg);
+   }
+}
+@keyframes flip-ver-right {
+   0% {
+      transform: rotateY(0);
+   }
+   
+   100% {
+      transform: rotateY(180deg);
+   }
+}
+@keyframes flip-ver-left {
+   0% {
+      transform: rotateY(0);
+   }
+   
+   100% {
+      transform: rotateY(-180deg);
+   }
+}
+
+/* tracking */
+@keyframes tracking-in-expand {
+   0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-expand-fwd {
+   0% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-700px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-expand-fwd-top {
+   0% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-700px) translateY(-500px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-expand-fwd-bottom {
+   0% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-700px) translateY(500px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-contract {
+   0% {
+      letter-spacing: 1em;
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      letter-spacing: normal;
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-contract-bck {
+   0% {
+      letter-spacing: 1em;
+      transform: translateZ(400px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-contract-bck-top {
+   0% {
+      letter-spacing: 1em;
+      transform: translateZ(400px) translateY(-300px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-in-contract-bck-bottom {
+   0% {
+      letter-spacing: 1em;
+      transform: translateZ(400px) translateY(300px);
+      opacity: 0;
+   }
+   
+   40% {
+      opacity: 0.6;
+   }
+   
+   100% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+}
+@keyframes tracking-out-contract {
+   0% {
+      opacity: 1;
+   }
+   
+   50% {
+      opacity: 1;
+   }
+   
+   100% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-contract-bck {
+   0% {
+      transform: translateZ(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 1;
+   }
+   
+   100% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-500px);
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-contract-bck-top {
+   0% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 1;
+   }
+   
+   100% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-500px) translateY(-300px);
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-contract-bck-bottom {
+   0% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 1;
+   }
+   
+   100% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-500px) translateY(300px);
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-expand {
+   0% {
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 0.8;
+   }
+   
+   100% {
+      letter-spacing: 1em;
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-expand-fwd {
+   0% {
+      transform: translateZ(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 0.8;
+   }
+   
+   100% {
+      letter-spacing: 1em;
+      transform: translateZ(300px);
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-expand-fwd-top {
+   0% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 0.8;
+   }
+   
+   100% {
+      letter-spacing: 1em;
+      transform: translateZ(300px) translateY(-200px);
+      opacity: 0;
+   }
+}
+@keyframes tracking-out-expand-fwd-bottom {
+   0% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+   }
+   
+   60% {
+      opacity: 0.8;
+   }
+   
+   100% {
+      letter-spacing: 1em;
+      transform: translateZ(300px) translateY(200px);
+      opacity: 0;
+   }
+}
